tests/agl/rejections/scope/top_level_bare_pattern_binder.agl
enum Flag
  | on
  | off

let value: Flag = Flag::on
case value of
  | captured => 1
